# optking

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  IRCFollowing.py  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  __init__.py  addIntcos.py  atomData.py  bend.py  cart.py  caseInsensitiveDict.py  convCheck.py  covRadii.py  displace.py  frag.py  hessian.py  history.py  intcosMisc.py  ircStep.py  linearAlgebra.py  misc.py  molsys.py  oofp.py  optExceptions.py  optParams.py  optimize.py  printTools.py  pyproject.toml  setup.cfg  setup.py  simple.py  stepAlgorithms.py  stre.py  testB.py  tors.py  (+2 more)
.github/workflows/: CI.yml  black.yml  release.yml  travis.yml
devtools/conda-envs/: base-next.yaml  base.yaml  base2.yaml  dev.yaml  docs.yaml  hatch-test.yaml
devtools/conda-envs/hatch/: hatch-test-python3.10-pydanticv1.yaml  hatch-test-python3.10-pydanticv2.yaml  hatch-test-python3.11-pydanticv2.yaml  hatch-test-python3.12-pydanticv2.yaml  hatch-test-python3.13-pydanticv1.yaml  hatch-test-python3.13-pydanticv2.yaml
devtools/scripts/: conda_env.py  dev_conda_env.py
devtools/travis-ci/: before_install.sh
docs/: Makefile  readme.md
docs/source/: algorithms.rst  api.rst  conf.py  convergence.rst  coords.rst  devs.rst  index.rst  interfaces.rst  misc.rst  mol.rst  molecule.rst  optimizations.rst  options.rst  options.rst.bak
optking/: IRCData.py  IRCFollowing.py  IRCdata.py  IRCfollowing.py  Psi4Opt.py  __init__.py  _version.py  addIntcos.py  atomData.py  bend.py  cart.py  caseInsensitiveDict.py  compute_wrappers.py  convCheck.py  convcheck.py  covRadii.py  dimerfrag.py  displace.py  engine_wrappers.py  exceptions.py  frag.py  hessian.py  history.py  intcosMisc.py  interfrag.py  ircStep.py  jsonoptwrapper.py  linearAlgebra.py  linesearch.py  lj_functions.py  loggingconfig.py  misc.py  molsys.py  oofp.py  optExceptions.py  optHelper.py  optParams.py  opt_helper.py  optimize.py  optparams.py  (+17 more)
optking/tests/: CH3O2_irc.hess  CH5_irc.hess  CH5_irc_coords.json  conftest.py  dimer_benzene_jupyter_demo.ipynb  json_betapinene.json  json_betapinene.v2.json  json_h2o.json  json_h2o.v2.json  json_hooh_frozen.json  json_hooh_frozen.v2.json  json_lif_cp.json  json_lif_cp.v2.json  json_lif_nocp.json  json_lif_nocp.v2.json  psi4_helper.py  test_2_hessians.py  test_atom.py  test_atom_stepwise.py  test_auxiliary_bonds.py  test_ccsd_g_opt.py  test_conjugate.py  test_dcft_g_opt.py  test_deriv_transforms.py  test_dimers_Bmat.py  test_dimers_benzene_pes.py  test_dimers_h2o.py  test_dimers_mt_tyr_Rscan.py  test_dimers_mt_tyr_frozen_orientation.py  test_dimers_ne2.py  test_dimers_orient.py  test_frozen_cart_and_backstep.py  test_frozen_internals.py  test_g_convergence.py  test_hbond.py  test_hf_g_keywords.py  test_hf_g_opt.py  test_hooh_ext_force.py  test_irc.py  test_irc2.py  (+23 more)
optking/tests/test_data/: C4H9NO2.hess  CH3O2_irc.hess  CH5_irc_ref.json  H2O2_irc.hess  HCN_irc.hess  hooh_irc.hess  irc_history.json  opt_history.json
optking/tests/utils/: utils.py
optking/v1/: optparams.py
optking/v2/: optparams.py
psi4/: 11-ts-hooh.in  4-h2o.in  4b-h2o-cart.in  6-frozen-hooh.in  7-fixed-hooh.in  H2O2input.in  Psi4Opt.py  b-hooh-hessians.in  h2oinput.in  input.py  linesearch.in  opt1-h2o.in  opt3-h2o.in  opt4-h2o.in  opt7-hooh-fixed.in  opt8-hooh-xyz-frozen.in
psi4/psiAPIversions/: 1-hooh.py  4-h2o.py  \  b-hooh-hessians.py  hooh.py  opt1-h2o.py  opt6_frozen_internals.py  opt8-hooh-xyz-frozen.py
psi4/psithon_versions/: linesearch.in  opt6-hooh-frozen.in  opt8-hooh-xyz-frozen.in  optA-h2o-trajectory.in
psi4inputs/psiAPIversions/: 11-ts-hooh.py  copt_testhessian.py  dimer-h2o-c6h6.py  dimer-ne2.py  froz-dimer-h2o.py  linesearch.py  opt1-h2o.py  opt2_allene.py  opt5-ch2.py  opt7-hooh-fixed.py
psi4inputs/psithon_versions/: 1-hooh.in  4-h2o.in  a-h2o-minimum.in  dcft-g-o2.in  hf-e-alleneLinear.in  hf-e-h2o.in  hf-g-alleneNonlinear.in  hf-g-h2o-frozenCart.in  hf-g-h2o-tight.in  hf-g-h2o.in  hf-g-hooh-fixed-3.in  hf-g-hooh-frozenCart-2.in  mp2-g-h2o.in  multi_frag.in  opt1-h2o.in  opt2-allene.in  opt4-h2o.in  opt5-ch2.in  scsomp3-g-h2o.in  todo-psi4tests.txt  ts-hf-g-hooh-2.in  uccsd-g-ch2.in  uccsdpt-g-ch2.in
scripts/: test_optking_and_psi4.py
tests/: ch3chch2cl.in  conftest.py  json_betapinene.json  json_hooh_frozen.json  jsoninput.json  psi4_helper.py  pytest.ini  sf4.in  test_1-hooh.py  test_11-ts-hooh.py  test_2_hessians.py  test_4-h2o.py  test_b-hooh-hessians.py  test_ccsd_g_opt.py  test_dcft_g_opt.py  test_dft_g_opt.py  test_dimers.py  test_dimers_Bmat.py  test_dimers_benzene_pes.py  test_dimers_h2o.py  test_dimers_h2o_orient.py  test_dimers_mt_tyr_Rscan.py  test_dimers_mt_tyr_frozen_orientation.py  test_dimers_ne2.py  test_dimers_orient.py  test_frozen_cart_and_backstep.py  test_frozen_internals.py  test_hbond.py  test_hf_g_keywords.py  test_hf_g_opt.py  test_irc_hooh.py  test_jsoninput.py  test_linesearch.py  test_lj.py  test_mp2_g_opt.py  test_nearlinear_dft_opt.py  test_oofp.py  test_openshell.py  test_opt2_allene.py  test_opt5-ch2.py  (+10 more)
tests/psi4inputs/psiAPIversions/: dimer-h2o.py
(+21 files in other folders)
