[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-conda"]
build-backend = "hatchling.build"

[project]
name = "OptKing"
dynamic = ["version"]
description = "A geometry optimizer for quantum chemistry."
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Rollin King", email = "rking@bethel.edu" },
    { name = "Alexander Heide", email = "alexander.heide@uga.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "msgpack>=1.0",
    "numpy>=1.20",
    "pydantic>=1.10.17",
    "qcelemental>=0.20.0",
    "qcengine>=0.20.0",
    "pint",
    "packaging",
]
requires-python = ">=3.10"

[project.optional-dependencies]
docs = [
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx<8",
    "sphinx-automodapi",
    "sphinx-design",
    "sphinxcontrib-napoleon",
    "sphinx-autobuild",
    "autodoc_pydantic>=1.9.1",
    "pint",
]
tests = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-pep8",
    # "psi4", cannot be satisfied with pip
    "hatch-conda",
]

style = [
    "black>=24, <25",
    "flake8",
    "isort",
]

# create pydanticv2 feature to force newer
pydanticv2 = [
    "pydantic>=2.0"
]

pydanticv1 = [
    "pydantic>=1.10.17"
]

psi4 = [
    "psi4>=1.7"
]

[project.urls]
Homepage = "https://github.com/psi-rking/optking"
Documentation = "https://optking.readthedocs.io/en/latest/"

[tool.hatch.version]
source = "vcs"  # Use hatch-vcs from above.
fallback-version = "0.5.0.dev0"

[build.hooks.vcs]
path = "optking/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "optking/",
    "docs/",
]

[tool.hatch.build.targets.wheel]
packages = ["optking"]
exclude = ["optking/tests"]

####
# Testing Setup.
# Test a combination of python versions with both pydantic v1 and pydantic v2
# python 3.13 and pydantic v2 also runs psi4's tests (psi4 --test=opt)
# This can be run from the parent directory with hatch test --all optking/tests
# omiting the --all flag will run a single test: py 3.10 and pydantic v1
####
[tool.hatch.envs.hatch-test]
type = "conda"
command = "conda"
parallel = true
default-args = ["optking/tests/"]
extra-args = ["--show-capture=stderr", "--check_iter=1", "-m", "not long"]
conda-forge = true
# environment-file = "./devtools/conda-envs/base-next.yaml"

[tool.hatch.envs.hatch-test.overrides]
name."3.13-pydanticv2".extra-args = { value = ["--show-capture=stderr", "--check_iter=1"]}
name."3.13-pydanticv2".scripts = [
    "run=python3 scripts/test_optking_and_psi4.py {env:HATCH_TEST_ARGS}",
]

# Couldn't get the nicer syntax below to work. Manually set environment file
# environment-file = { value = "devtools/conda-envs/hatch/hatch-test-python{matrix:python}-{matrix:pydantics}.yaml" }
name."3.10-pydanticv1".environment-file = { value = "devtools/conda-envs/hatch/hatch-test-python3.10-pydanticv1.yaml" }
# name."3.13-pydanticv1".environment-file = { value = "devtools/conda-envs/hatch/hatch-test-python3.13-pydanticv1.yaml" }
name."3.11-pydanticv2".environment-file = { value = "devtools/conda-envs/hatch/hatch-test-python3.11-pydanticv2.yaml" }
name."3.12-pydanticv2".environment-file = { value = "devtools/conda-envs/hatch/hatch-test-python3.12-pydanticv2.yaml" }
name."3.13-pydanticv2".environment-file = { value = "devtools/conda-envs/hatch/hatch-test-python3.13-pydanticv2.yaml" }

# Can invoke all environments with hatch test --all
# Everything else will come from conda-forge, but we want multiple pydantic versions
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10"]
pydantics = ["pydanticv1"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11", "3.12", "3.13"]
pydantics = ["pydanticv2"]

####
# Basic environment to use Psi4 and Optking
# Provides an easy way to start running optimizations.
# Better for users to follow Psi4's install probably but this provideds a single command
# to get up and running. `hatch env create psi4`.
####
[tool.hatch.envs.psi4]
type = "conda"
command = "conda"
environment-file = "./devtools/conda-envs/base.yaml"

####
# Linting and Formatting
####
[tool.hatch.envs.hatch-static-analysis]
features = [
    "style",  # use style depdency group above
]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = [
    "black --check --diff --line-length=99 {args:.}",
    "isort --check-only --diff {args:.}",
]
format-fix = [
    "black --line-length=99 {args:.}",
    "isort {args:.}",
]
lint-check = "flake8 --max-line-length=99 {args:.}"
lint-fix = "lint-check"

[tool.pytest.ini_options]
testpaths = ["optking/tests"]

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -M html docs/source docs/build"
serve = "sphinx-autobuild --port=0 --open-browser docs/source docs/build/html/ &"
